plugins {
    id("java")
    id("war")
    id("io.freefair.aspectj") version "8.0.1"
    // id("org.springframework") version "3.1.0"
}

sourceCompatibility = '17'
compileJava.options.encoding = "UTF-8"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework:spring-context:5.2.24.RELEASE'
    implementation 'org.aspectj:aspectjweaver:1.8.13'
    implementation 'org.springframework:spring-jdbc:6.0.9'
    implementation 'org.apache.tomcat:tomcat-jdbc:7.0.28'
    implementation 'mysql:mysql-connector-java:8.0.33'
    
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    compileOnly 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
    implementation 'javax.servlet.jsp.jstl:jstl-api:1.2'
    implementation 'org.springframework:spring-webmvc:6.0.9'
    
}

wrapper {
    gradleVersion = '8.1'
}